<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateHabitFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/habit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:hint="@string/habit_name"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/baseline_task_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxWidth="488dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/day_of_week_heading"
                android:layout_width="match_parent"
                android:paddingTop="2dp"
                android:layout_height="wrap_content"
                android:text="@string/select_days_of_week"
                app:layout_constraintTop_toBottomOf="@id/habit_name"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/day_of_week"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingBottom="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/day_of_week_heading">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mon"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/m"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tue"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tue"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/t"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toStartOf="@+id/wed"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/mon"
                    app:layout_constraintTop_toTopOf="@+id/mon" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/wed"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/w"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toStartOf="@+id/thu"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tue"
                    app:layout_constraintTop_toTopOf="@+id/tue" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/thu"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/t"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toStartOf="@+id/fri"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/wed"
                    app:layout_constraintTop_toTopOf="@+id/wed" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fri"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/f"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toStartOf="@+id/sat"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/thu"
                    app:layout_constraintTop_toTopOf="@+id/thu" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sat"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/s"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toStartOf="@+id/sun"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/fri"
                    app:layout_constraintTop_toTopOf="@+id/fri" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sun"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/s"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/sat"
                    app:layout_constraintTop_toTopOf="@+id/sat"
                    tools:layout_editor_absoluteY="27dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reminder_time"
                android:layout_width="match_parent"
                android:layout_marginVertical="8dp"
                android:hint="@string/time_of_reminder"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/baseline_access_time_24"
                app:layout_constraintTop_toBottomOf="@id/day_of_week">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reminder_time_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:minWidth="488dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/habit_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                app:errorEnabled="true"
                android:hint="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reminder_time"
                app:startIconDrawable="@drawable/baseline_notes_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxWidth="488dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editable" />

</androidx.constraintlayout.widget.ConstraintLayout>