...
    <string name="save">Save</string>
    <string name="time_of_reminder">Time of reminder</string>
    <string name="select_days_of_week">Select days of week</string>
    <string name="habit_name">Habit Name</string>
    <string name="create_new_habit">Create a new Habit</string>
    <string name="description">Description</string>
    <string name="default_time">9:00 AM</string>
    <string name="s">S</string>
    <string name="f">F</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="m">M</string>
    <string name="habit_name_error">Please enter a name for your new habit</string>
...
